--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,24 @@
 version: '3.8'
 
 services:
-  # --------- PostgreSQL xidməti ----------
-  postgres:
+  app:
+    build: .
+    container_name: mvcapp
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/mydb
+      SPRING_DATASOURCE_USERNAME: myuser
+      SPRING_DATASOURCE_PASSWORD: mypassword
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+    networks:
+      - app-net
+
+  db:
     image: postgres:15
     container_name: postgres-con
-    restart: always
     environment:
       POSTGRES_DB: mydb
       POSTGRES_USER: myuser
@@ -14,22 +27,11 @@ services:
       - "5434:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-
-  # --------- Java tətbiq xidməti ----------
-  app:
-    build: .
-    container_name: postgres-con
-    depends_on:
-      - postgres
-    ports:
-      - "8080:8080"
-    environment:
-      # Spring Boot application.yml içində override üçün
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/mydb
-      SPRING_DATASOURCE_USERNAME: myuser
-      SPRING_DATASOURCE_PASSWORD: mypassword
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
-    restart: on-failure
+    networks:
+      - app-net
 
 volumes:
   postgres_data:
+
+networks:
+  app-net:
